// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bar-chart-metrics Renders \`bar-chart-metrics\` with default props 1`] = `
<div
  class="layout kpi-widget column align-center"
>
  <h4
    class="kpi-widget__title"
  >
  </h4>
  <!---->
</div>
`;

exports[`bar-chart-metrics Renders \`bar-chart-metrics\` with empty data 1`] = `
<div
  class="layout kpi-widget column align-center"
>
  <h4
    class="kpi-widget__title"
  >
  </h4>
  <div
    class="kpi-widget__chart"
  >
    <div
      class=""
    >
      <canvas
        height="560"
        id="bar-chart"
        style="display: block; box-sizing: border-box; user-select: none; webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); height: 560px; width: 600px;"
        width="600"
      />
    </div>
    <kpi-chart-export-actions-stub
      chart="[object Object]"
      class="mt-4"
    />
  </div>
</div>
`;

exports[`bar-chart-metrics Renders \`bar-chart-metrics\` with history data 1`] = `
<div
  class="layout kpi-widget column align-center"
>
  <h4
    class="kpi-widget__title"
  >
  </h4>
  <div
    class="kpi-widget__chart"
  >
    <div
      class=""
    >
      <canvas
        height="560"
        id="bar-chart"
        style="display: block; box-sizing: border-box; user-select: none; webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); height: 560px; width: 600px;"
        width="600"
      />
    </div>
    <kpi-chart-export-actions-stub
      chart="[object Object]"
      class="mt-4"
    />
  </div>
</div>
`;

exports[`bar-chart-metrics Renders \`bar-chart-metrics\` with metrics 1`] = `
<div
  class="layout kpi-widget column align-center"
>
  <h4
    class="kpi-widget__title"
  >
    Custom title
  </h4>
  <div
    class="kpi-widget__chart"
  >
    <div
      class=""
    >
      <canvas
        height="500"
        id="bar-chart"
        style="display: block; box-sizing: border-box; user-select: none; webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); height: 500px; width: 600px;"
        width="600"
      />
    </div>
    <kpi-chart-export-actions-stub
      chart="[object Object]"
      class="mt-4"
    />
  </div>
</div>
`;

exports[`bar-chart-metrics Renders \`bar-chart-metrics\` with stacked history data 1`] = `
<div
  class="layout kpi-widget column align-center"
>
  <h4
    class="kpi-widget__title"
  >
  </h4>
  <div
    class="kpi-widget__chart"
  >
    <div
      class=""
    >
      <canvas
        height="560"
        id="bar-chart"
        style="display: block; box-sizing: border-box; user-select: none; webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); height: 560px; width: 600px;"
        width="600"
      />
    </div>
    <kpi-chart-export-actions-stub
      chart="[object Object]"
      class="mt-4"
    />
  </div>
</div>
`;

exports[`bar-chart-metrics Renders \`bar-chart-metrics\` with stacked metrics 1`] = `
<div
  class="layout kpi-widget column align-center"
>
  <h4
    class="kpi-widget__title"
  >
    Custom title
  </h4>
  <div
    class="kpi-widget__chart"
  >
    <div
      class=""
    >
      <canvas
        height="500"
        id="bar-chart"
        style="display: block; box-sizing: border-box; user-select: none; webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); height: 500px; width: 600px;"
        width="600"
      />
    </div>
    <kpi-chart-export-actions-stub
      chart="[object Object]"
      class="mt-4"
    />
  </div>
</div>
`;
